# TNCG15_Project

./: CMakeLists.txt  README.md  Shader.cpp  glad.c  main.cpp
include/: Shader.hpp  camera.h  computeNormals.h  objectDrawer.h  ray.h  renderer.h  roomClass.h  stocasticRayGeneration.h  tracer.h  triangle.h  vec3.h
include/glad/: glad.h
lib/: libglad.lib
qualityMetricsScripts/: README.md  importedMetrics.py  logger.py  main.py  scielab.py  spd.py
src/: main.cpp
